CI images update

--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-09 20:44:32
+lastsearch = 2024-07-09 22:36:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -130,4 +130,9 @@ url = https://vatlieuxaydung.org.vn/Upload/48/Nam_2016/CongboGiaVLXD/LongAn_Than
 match = -21.1%%
 title = ten Dia chi di dong
 url = https://pdfcoffee.com/download/dskh-gui-tiet-kiem-tren-5-ty-pdf-free.html
+
+[noithatbamboo.vn]
+match = 33.3%%
+title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
+url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
 
