--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-09 22:16:15
+lastsearch = 2024-07-09 22:30:05
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -142.9%%
-title = Cảnh báo thời tiết 09/07/2024 | Bắc Bộ, Trung Bộ chiều nay ...
-url = https://www.youtube.com/watch?v=ak-lyqS25Vk
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=GzepFXdUfeQ
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -57.1%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -42.9%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -37,9 +37,9 @@ title = Tổng hợp quy định nhập cảnh Đài Loan 2024
 url = https://vnpay.vn/quy-dinh-nhap-canh-dai-loan-0pgkjx2c6vit
 
 [taiwandiary.vn]
-match = -85.7%%
-title = Hướng Dẫn Đổi Hộ Chiếu Cho Người Việt Nam Ở Đài ...
-url = https://taiwandiary.vn/2023/02/27/huong-dan-doi-ho-chieu-cho-nguoi-viet-nam-o-dai-loan-moi-nhat/
+match = -100.0%%
+title = Tổng hợp các loại visa tại Đài Loan có thể bạn chưa biết
+url = https://taiwandiary.vn/2024/05/29/tong-hop-cac-loai-visa-tai-dai-loan/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -119.0%%
-title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
-url = https://visana.vn/visa-quan-hong-dai-loan/
+match = -114.3%%
+title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
+url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
 match = -104.8%%
