--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-09 19:24:31
+lastsearch = 2024-07-09 22:31:29
 
 [www.cms.gov]
 match = 4.5%%
@@ -550,4 +550,9 @@ url = https://www2.santacruzcountyca.gov/planning/plnmeetings/PLNSupMaterial/PC/
 match = -150.0%%
 title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80agtiiz.xn--p1ai/z452cthwwwmarelyruamafe85
+
+[amateurphotographer.com]
+match = 0.0%%
+title = 
+url = https://amateurphotographer.com/review/om-system-tough-tg-7-review-raw-makes-it/
 
