--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-09 20:07:35
+lastsearch = 2024-07-09 22:36:51
 
 [demxanh.com]
 match = -131.6%%
@@ -32,9 +32,9 @@ title = Tấm trang trí nội thất hiện đại bằng thép không gỉ FM8
 url = https://flexhouse.vn/tam-trang-tri-noi-that-hien-dai-bang-thep-khong-gi-fm874
 
 [en.wikipedia.org]
-match = -73.7%%
-title = List of airports by IATA airport code: T
-url = https://en.wikipedia.org/wiki/List_of_airports_by_IATA_airport_code:_T
+match = -152.6%%
+title = List of allied military operations of the Vietnam War (1966)
+url = https://en.wikipedia.org/wiki/List_of_allied_military_operations_of_the_Vietnam_War_(1966)
 
 [hoianmemoriesresort.com]
 match = -15.8%%
@@ -220,4 +220,14 @@ url = https://suongtuyet.com/tam-trang-tri-giuong-khach-san-la-gi-va-nhung-dieu-
 match = -178.9%%
 title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1avdibc.xn--p1ai/18946235kvartal-triumphruk3fe43a
+
+[history.army.mil]
+match = 0.0%%
+title = 
+url = https://history.army.mil/html/reference/army_flag/vn.html
+
+[www.crazytravelista.com]
+match = -121.1%%
+title = Ninh Binh Vietnam: The Incredible Day Trip You MUST ...
+url = https://www.crazytravelista.com/ninh-binh-vietnam-day-trip/
 
