--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-09 19:31:22
+lastsearch = 2024-07-09 22:29:54
 
 [www.lazada.vn]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = -88.9%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = -100.0%%
