--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-09 22:20:15
+lastsearch = 2024-07-09 22:46:06
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Ga Gối Everon mẫu mới nhất của năm ...
-url = https://tiki.vn/bo-chan-ga-goi-everon-cao-cap-mau-moi-nhat-cua-nam-2021-bo-san-pham-gom-1-ga-phu-hoac-ga-chun-chan-co-gia-chi-tiet-theo-san-pham-1-chan-4-mua-co-chan-lop-bong-mong-ben-trong-2-vo-goi-nam-co-45x65cm-p71564428.html?spid=91755561/
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -37,14 +37,14 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -66.7%%
-title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+match = -72.2%%
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -116.7%%
-title = 15+ Bộ Chăn Ga Gối Đệm Hoạt Hình Bé Nào Cũng Mê
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-hoat-hinh
+match = -61.1%%
+title = Bộ ga phủ Silky G119 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-silky-g119
 
 [aeoneshop.com]
 match = -105.6%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
 
 [everonvn.com.vn]
-match = -116.7%%
-title = Bộ Ga Chun Chần Everon Green-Solid Giảm Giá 35%%
-url = https://everonvn.com.vn/everon/2149/bo-ga-chun-chan-green-solid
+match = 27.8%%
+title = Bộ Everon Esm-20011
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
 match = -77.8%%
