--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-09 21:32:43
+lastsearch = 2024-07-09 22:47:58
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -173.7%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài lộc trong ...
+url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -142.9%%
+title = YouTube
+url = https://www.youtube.com/watch?v=P2FZLlxjB4U
 
 [kallos.co]
 match = -105.3%%
