--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-09 20:51:47
+lastsearch = 2024-07-09 22:47:36
 
 [shopee.vn]
-match = -50.0%%
-title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
+match = -33.3%%
+title = CHIẾU ĐIỀU HOÀ MÂY LOẠI 1 ĐỦ KÍCH THƯỚC , GIÁ TẠI ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-MÂY-LOẠI-1-ĐỦ-KÍCH-THƯỚC-GIÁ-TẠI-XƯỞNG-SẢN-XUẤT--i.46360011.4028012766
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [suongtuyet.com]
-match = 4.2%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -41.7%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
 match = -33.3%%
