--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-09 20:24:09
+lastsearch = 2024-07-09 22:49:27
 
 [www.lazada.vn]
 match = -268.8%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -237.5%%
-title = @iluvsarahiiii rocking a 90’s brown lip duo -warm brown lip ...
-url = https://www.tiktok.com/@hudabeauty/video/7373381761629424942
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
@@ -119,5 +119,5 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/
+url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 
