CI images update

--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-09 22:20:27
+lastsearch = 2024-07-09 23:23:23
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlenKLpkc&sig=ACfU3U2x0j9vSfCgrK9svrjQzlqI8eKvaQ&hl=en&sa=X&ved=2ahUKEwi1v6COoZqHAxVeGTQIHeyfAycQ6AF6BAgdEAM
+match = -270.0%%
+title = The United States Air Force JAG Law Review
+url = https://books.google.com/books?id=hRVIAQAAIAAJ&pg=PA147&lpg=PA147&dq=man+ren+16&source=bl&ots=ISTkRroJrG&sig=ACfU3U2lQeKpr0tdhGcJj2ei8p5Sp_JOIA&hl=en&sa=X&ved=2ahUKEwifnOqWr5qHAxVjM1kFHX0iBNwQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
