--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-09 22:13:54
+lastsearch = 2024-07-09 23:18:01
 
 [demxanh.com]
-match = 40.7%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+match = 14.8%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [shopee.vn]
-match = -18.5%%
-title = Chiếu điều hoà, ga giường cao su non không bí lưng ...
-url = https://shopee.vn/Chiếu-điều-hoà-ga-giường-cao-su-non-không-bí-lưng-HÀNG-LOẠI-1(TẶNG-2-VỎ-GỐI)-i.49163646.20104275799
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 18.5%%
