--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-09 16:16:18
+lastsearch = 2024-07-09 23:20:39
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -17,9 +17,9 @@ title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -32,9 +32,9 @@ title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
 url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
-match = 39.0%%
-title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+match = 55.3%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [www.everonqb.com]
 match = 29.8%%
@@ -50,4 +50,9 @@ url = https://everonvn.com.vn/everon/1860/dem-lo-xo-kingkoil-everon-cloud-firm
 match = -7.7%%
 title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
+
+[everonhanquoc.vn]
+match = 33.3%%
+title = Đệm Lò Xo King Koil Công Nghệ Hàng Đầu Tại Mỹ
+url = https://everonhanquoc.vn/1035/dem-lo-xo-king-koil
 
