--- a/images/nem-sieu-nhe-5f-16/config.ini
+++ b/images/nem-sieu-nhe-5f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 lastopen = 2024-06-10 00:33:56
 
 [search]
-lastsearch = 2024-07-09 21:44:41
+lastsearch = 2024-07-09 23:24:05
 
 [shopee.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Đệm Sinh viên siêu nhẹ siêu bền
 url = https://shopee.vn/Đệm-Sinh-viên-siêu-nhẹ-siêu-bền-i.270303342.9615997915
 
 [tuhung.net]
-match = -88.9%%
-title = Cửa hàng - Page 3 of 10 - Nội Thất Tứ Hưng
-url = https://tuhung.net/cua-hang/page/3/
+match = -122.2%%
+title = Địa chỉ bán nệm (đệm) giá rẻ - nệm (đệm) mút xốp PE
+url = https://tuhung.net/☛-☛-dia-chi-ban-nem-dem-gia-re-nem-dem-sinh-vien-nem-dem-mut-xop-pe-☚☚/
 
 [congtynemthangloi.com.vn]
 match = -77.8%%
@@ -47,14 +47,14 @@ title = Ăn gì ở Sài Gòn? 30 món ăn ngon Sài Gòn ngon khó cưỡng
 url = https://www.traveloka.com/vi-vn/explore/culinary/30-mon-an-ngon-sai-gon/58039
 
 [www.diepxuan.com]
-match = 44.4%%
-title = Điệp Xuân Nệm siêu nhẹ 5F 16
-url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -161.1%%
-title = Cư dân Đội Cấn - Ngọc Hà - Kim Mã - Ba Đình | MAI EM CÓ
-url = https://m.facebook.com/groups/1443256819272820/posts/3705782719686874/
+match = -111.1%%
+title = Người Việt ở Mỹ | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
+url = https://m.facebook.com/groups/2942758799338176/posts/3741704889443559/
 
 [www.tiktok.com]
 match = 5.6%%
