--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-09 22:32:35
+lastsearch = 2024-07-09 23:50:41
 
 [everon.online]
 match = 19.2%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260?l=vietnamese&snr=2_9_100006_100202_apphubheader
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=34646864
 
 [vi.wikipedia.org]
 match = -19.2%%
