--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-09 22:28:28
+lastsearch = 2024-07-09 23:46:12
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -133.3%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -46.7%%
+title = Đèn mắt ếch chiếu điểm HT 8095 10W
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8095-10w
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = Cây bắt mồi
 url = https://hactexoticzone.com/cay-bat-moi
 
 [www.youtube.com]
-match = -180.0%%
-title = Ngô Kỷ thời mạt hạng.Sư Thích Minh Tuệ đang ở đâu?
-url = https://www.youtube.com/watch?v=j7y3qRh9Pgo
+match = -166.7%%
+title = CHƠI- kỳ 10- Ngón Tay Chỉ Trăng -HT THÍCH TỪ THÔNG
+url = https://www.youtube.com/watch?v=tZWh9zAOkYM
 
 [thaibinhseed.com.vn]
 match = -193.3%%
