--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-09 21:14:32
+lastsearch = 2024-07-09 23:46:46
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -227.3%%
-title = Eat Healthier and more Economically - Salina
-url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
+match = -172.7%%
+title = Tyme Out Steakhouse | Grandview Plaza KS
+url = https://www.facebook.com/TymeOutSteakhouse/
 
 [www.hoteljob.vn]
 match = -327.3%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -63.6%%
-title = Ultra Running Calendar
-url = https://ultrarunning.com/calendar/?refinementList[distances.group][0]=26-40 mi.&refinementList[distances.group][1]=41-60 mi.&refinementList[month_name][0]=04Apr&refinementList[month_name][1]=12Dec&hitsPerPage=24&page=37
+match = -245.5%%
+title = Tam Nguyen Race Results - UltraRunning Magazine
+url = https://ultrarunning.com/calendar/runner/show?first_name=Tam&last_name=Nguyen&runner_id=120117
 
 [www.quora.com]
 match = -145.5%%
@@ -108,8 +108,8 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 
 [kstoolsvietnam.vn]
 match = -327.3%%
-title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
+title = Kéo cắt kim loại 240 mm KS Tools 118.0053 cắt tay trái.
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-kim-loai-240-mm-ks-tools-1180053-cat-tay-trai.html
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
@@ -152,9 +152,9 @@ title = Provider List - Leon County Clerk of Court and Comptroller
 url = https://cvweb.leonclerk.com/public/clerk_services/marriage/premarital_information/provider_list.asp
 
 [en.wikipedia.org]
-match = -209.1%%
-title = List of Louisiana State University alumni
-url = https://en.wikipedia.org/wiki/List_of_Louisiana_State_University_alumni
+match = 27.3%%
+title = Tampa, Kansas
+url = https://en.wikipedia.org/wiki/Tampa,_Kansas
 
 [www.compass.com]
 match = -272.7%%
@@ -217,8 +217,8 @@ title = 5 Meet Death In Fiery Crash
 url = https://www.cadl.org/lhonline/ICN1965-08-11.pdf
 
 [www.land.com]
-match = -281.8%%
-title = 6656 Tim Tam Trail, Tallahassee, FL 32309 - Land.com
+match = -309.1%%
+title = 6656 Tim Tam Trail, Tallahassee, FL 32309 | MLS: 374481
 url = https://www.land.com/property/6656-Tim-Tam-Trail-Tallahassee-Florida-32309/20851193/
 
 [www.lazada.vn]
