--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-09 22:20:40
+lastsearch = 2024-07-09 23:49:12
 
 [www.tui.co.uk]
-match = -7.7%%
-title = Flight Status
-url = https://www.tui.co.uk/flight/arrivals-and-departures
+match = -86.7%%
+title = Top things to do in Singapore | Discover
+url = https://www.tui.co.uk/discover/top-things-to-do-singapore
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -17,9 +17,9 @@ title =
 url = https://www.travelgossip.co.uk/latestnews/marella-cruises-cancels-winter-2024-25-asia-and-middle-east-programme/
 
 [www.flightaware.com]
-match = -213.3%%
-title = BY165 (TOM165) TUI Airways Flight Tracking and History ...
-url = https://www.flightaware.com/live/flight/TOM165/history/20240315/0520Z/WSSS/EGCC
+match = -60.0%%
+title = Live TUI Airways Flight Status
+url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
 match = -20.0%%
@@ -87,8 +87,8 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
