--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-09 16:28:07
+lastsearch = 2024-07-09 23:47:42
 
 [www.walmart.com]
 match = -181.2%%
@@ -17,8 +17,8 @@ title = Huda Beauty Lip Stain
 url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [www.diepxuan.com]
-match = -93.8%%
-title = Nệm bông - Chăn ga gối đệm Điệp Xuân
+match = -150.0%%
+title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [digitalmaine.com]
