--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-09 22:36:07
+lastsearch = 2024-07-10 00:35:52
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -410,4 +410,9 @@ url = https://cafef.vn/nam-than-man-anh-viet-u50-chua-vo-bat-ngo-khoe-co-con-tra
 match = -200.0%%
 title = Phương Linh hòa giọng Kai Đinh trong "Giao lộ thời gian"
 url = https://tuoitrethudo.vn/phuong-linh-hoa-giong-kai-dinh-trong-giao-lo-thoi-gian-254106.html
+
+[stockbiz.vn]
+match = -193.8%%
+title = SSI Research: Dòng tiền sẽ luân chuyển tìm tới các nhóm ...
+url = https://stockbiz.vn/tin-tuc/ssi-research-dong-tien-se-luan-chuyen-tim-toi-cac-nhom-duoc-huong-loi-truc-tiep-tu-chinh-sach/26747727
 
