--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-09 20:21:02
+lastsearch = 2024-07-10 00:32:26
 
 [www.tiktok.com]
 match = -170.6%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -117.6%%
-title = Live xả vườn chậu 16, chậu thiết kế 0333491000
-url = https://www.youtube.com/watch?v=vx2q7C7tLrY
+match = -70.6%%
+title = 𝙍𝙚𝙡𝙖𝙭𝙞𝙣𝙜 𝙎𝙠𝙞𝙣𝙘𝙖𝙧𝙚 𝙍𝙤𝙪𝙩𝙞𝙣𝙚 𝘾𝙡𝙚𝙖𝙣𝙨𝙞𝙣𝙜 ...
+url = https://www.youtube.com/watch?v=fkSO3-Ca_ow
 
 [communityassociations.net]
 match = -35.3%%
@@ -395,4 +395,9 @@ url = https://cafef.vn/nu-nsnd-la-hoa-khoi-man-anh-lung-lay-tuoi-80-van-dep-quye
 match = -152.9%%
 title = What happens if you do something without HOA approval?
 url = https://www.quora.com/What-happens-if-you-do-something-without-HOA-approval
+
+[www.nyc.gov]
+match = -70.6%%
+title = New York State Multiple Dwelling Law
+url = https://www.nyc.gov/assets/buildings/pdf/MultipleDwellingLaw.pdf
 
