CI images update

--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-10 03:15:34
+lastsearch = 2024-07-10 03:31:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -264,7 +264,7 @@ url = https://www.prevail-partners.com/iframe.php?url=https://xn--b1aktidr.xn--p
 [www.asc-aqua.org]
 match = -116.7%%
 title = Sheet1
-url = https://www.asc-aqua.org/wp-content/uploads/2023/04/Copy-of-2023_03-CoC-holders-with-scope.xlsx
+url = https://www.asc-aqua.org/wp-content/uploads/2023/01/2023_01-CoC-holders-with-scope.xlsx
 
 [olm.vn]
 match = -266.7%%
@@ -315,4 +315,34 @@ url = https://taekwondoviethan.com/chieu-sinh-lich-hoc/
 match = -246.7%%
 title = STARRETT Lưỡi cưa 91140-07-09-1/2 10474, Chiều rộng lưỡi ...
 url = https://vn.raptorsupplies.com/pd/starrett/91140-07-09-1-2
+
+[4ba8a17f01f843446fde-df22fcb26686c8be7ff55766cd6a4144.ssl.cf6.rackcdn.com]
+match = -220.0%%
+title = Edith Cowan College Registered Agents List - January 2019
+url = https://4ba8a17f01f843446fde-df22fcb26686c8be7ff55766cd6a4144.ssl.cf6.rackcdn.com/73_ECC_Agents_list_website_-_January_2019.pdf
+
+[university.fpt.edu.vn]
+match = -173.3%%
+title = STUDENTS' CONFERENCE ON SCIENTIFIC RESEARCH ...
+url = https://university.fpt.edu.vn/wp-content/uploads/2024/05/Proceeding-2018-final.pdf
+
+[files.customs.gov.vn]
+match = -146.7%%
+title = DANH SÁCH HÀNG HÓA NHẬP KHẨU YÊU CẦU KIỂM ...
+url = https://files.customs.gov.vn/CustomsCMS/TONG_CUC/2022/1/7/252DSsoitruocTongHop(7.1)c.pdf
+
+[dautieng.binhduong.gov.vn]
+match = -173.3%%
+title = UY BAN NHAN DAN HUYEN dAu TIENG S6:933? /QD-UBND
+url = http://dautieng.binhduong.gov.vn/portal/File/Document/202234130320.pdf
+
+[m.phonhadat.net]
+match = -186.7%%
+title = Nhà MT đường số 1 KDC Lý Chiêu Hoàng, An Lạc, Bình ...
+url = https://m.phonhadat.net/ban-nha-mat-pho-binh-tan/nha-mt-duong-so-1-kdc-ly-chieu-hoang-an-lac-binh-tan-dt-4-x-18m-gia-97-ty-tl-pr15838710.htm
+
+[www.vietcr.com]
+match = -86.7%%
+title = Advanced search - WVB FIS Co., Ltd
+url = http://www.vietcr.com/corporations/search/alphabe/character/I/page/75/
 
