--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-09 23:50:41
+lastsearch = 2024-07-10 03:31:00
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@hungvovn01/video/7387316093871820039
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTVHmG_G&sig=ACfU3U1t6Zi---7TbUODLSgcUijXmVUgPg&hl=en&sa=X&ved=2ahUKEwiZoKHp4ZmHAxUVEUQIHZjoCawQ6AF6BAgTEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTVKsC1z&sig=ACfU3U2OYFCTtwc7ZE-3rrgn5TaFwaEBzA&hl=en&sa=X&ved=2ahUKEwinnMfD5pqHAxW3kIkEHZkXDRwQ6AF6BAgzEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -57,9 +57,9 @@ title = Bộ 3 nồi inox 4 đáy Nagakawa NAG1306 (16cm, 20cm ...
 url = https://shop.nagakawa.com.vn/bo-3-noi-inox-4-day-nagakawa-nag1306-16cm-20cm-24cm-quai-vang.html
 
 [giaiphapchung.vn]
-match = 11.5%%
-title = Màn hình LCD 1602 có giải mã I2C
-url = https://giaiphapchung.vn/module-lcd1602-i2c-arduino
+match = -53.8%%
+title = Bộ cau su 16 cái bịt đầu bảo vệ ổ kết nối cho Laptop
+url = https://giaiphapchung.vn/bo-cau-su-16-cai-bit-dau-bao-ve-o-ket-noi-cho-laptop
 
 [www.diepxuan.com]
 match = 96.2%%
