--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-10 00:50:55
+lastsearch = 2024-07-10 03:39:38
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -32,9 +32,9 @@ title = Chăn ga gối Home mã H17-048
 url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [flexhouse.vn]
-match = -17.9%%
-title = Bộ chăn ra gối cotton phối bèo nhiều màu sắc MM1175
-url = https://flexhouse.vn/bo-chan-ra-goi-cotton-phoi-beo-nhieu-mau-sac-mm1175
+match = -3.6%%
+title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
+url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [jysk.vn]
 match = -21.4%%
