--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-10 02:14:05
+lastsearch = 2024-07-10 03:38:05
 
 [quizlet.com]
 match = -170.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -100.0%%
-title = The Ren Men (@the_ren_men)
-url = https://www.instagram.com/the_ren_men/
+match = -270.0%%
+title = @renforshort • Instagram photos and videos
+url = https://www.instagram.com/renforshort/?hl=en
 
 [www.youtube.com]
 match = -310.0%%
