--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-09 23:46:46
+lastsearch = 2024-07-10 03:40:11
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -27,9 +27,9 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -172.7%%
-title = Tyme Out Steakhouse | Grandview Plaza KS
-url = https://www.facebook.com/TymeOutSteakhouse/
+match = -227.3%%
+title = Eat Healthier and more Economically - Salina
+url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
 
 [www.hoteljob.vn]
 match = -327.3%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -245.5%%
-title = Tam Nguyen Race Results - UltraRunning Magazine
-url = https://ultrarunning.com/calendar/runner/show?first_name=Tam&last_name=Nguyen&runner_id=120117
+match = -63.6%%
+title = Ultra Running Calendar
+url = https://ultrarunning.com/calendar/?refinementList[distances.group][0]=26-40 mi.&refinementList[distances.group][1]=41-60 mi.&refinementList[month_name][0]=04Apr&refinementList[month_name][1]=12Dec&hitsPerPage=24&page=37
 
 [www.quora.com]
 match = -145.5%%
@@ -217,8 +217,8 @@ title = 5 Meet Death In Fiery Crash
 url = https://www.cadl.org/lhonline/ICN1965-08-11.pdf
 
 [www.land.com]
-match = -309.1%%
-title = 6656 Tim Tam Trail, Tallahassee, FL 32309 | MLS: 374481
+match = -281.8%%
+title = 6656 Tim Tam Trail, Tallahassee, FL 32309 - Land.com
 url = https://www.land.com/property/6656-Tim-Tam-Trail-Tallahassee-Florida-32309/20851193/
 
 [www.lazada.vn]
