--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-10 02:33:11
+lastsearch = 2024-07-10 03:30:00
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [tuananh.vn]
 match = 8.0%%
@@ -47,8 +47,8 @@ title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
 url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 
 [demviethome.vn]
-match = -36.0%%
-title = Đệm bông ép Tuấn Anh Korea Gấm giá rẻ hà nội. ...
+match = -4.0%%
+title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [bedding.vn]
