CI images update

--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-10 02:46:11
+lastsearch = 2024-07-10 03:52:42
 
 [thefelix.vn]
 match = -50.0%%
@@ -120,4 +120,9 @@ url = https://congtynemthangloi.com.vn/nem-cao-su-thien-nhien-100-thang-loi-dem-
 match = 31.6%%
 title = Nệm Cao Su Thiên Nhiên 1M4 | Cao Cấp Bền Giá Tại Xưởng
 url = https://nemson.vn/san-pham/nem-son-white-140x200x10/
+
+[bsamedia.vn]
+match = 57.1%%
+title = NỆM CAO SU THIÊN NHIÊN FELIX
+url = https://bsamedia.vn/nem-cao-su-thien-nhien-felix/
 
