--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-10 02:10:49
+lastsearch = 2024-07-10 03:50:41
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -27,9 +27,9 @@ title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Chăn ga gối Home mã H18-056 Sale 40%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
+match = -85.7%%
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -42,8 +42,8 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [www.diepxuan.com]
-match = -4.8%%
-title = Điệp Xuân Chăn ga gối xoa nhung
+match = -66.7%%
+title = Chăn ga gối xoa nhung - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/chan-ga-goi-xoa-nhung.html
 
 [everon365.vn]
