--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-10 00:50:36
+lastsearch = 2024-07-10 03:49:35
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -222,8 +222,8 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -366.7%%
-title = Book Tickets for Experiences and Activities Worldwide | TUI ...
+match = -283.3%%
+title = Book Tickets for Experiences and Activities Worldwide
 url = https://www.tuimusement.com/us/
 
 [www.dixondirectional.com]
