CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-10 03:13:54
+lastsearch = 2024-07-10 04:13:34
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -175.0%%
-title = Văn hóa, nguyệt san: tập-san nghiên-cứu và phổ-thông
-url = https://books.google.com/books?id=3oclAAAAMAAJ&pg=PA220&lpg=PA220&dq=chieu+lac+soc+18&source=bl&ots=CqzII3Mm4l&sig=ACfU3U1KIOY8Mz8tTGTemjgwrTFlyY0cGQ&hl=en&sa=X&ved=2ahUKEwiDsu3Z4pqHAxWmD1kFHQmsAWcQ6AF6BAgdEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=rKfaAAAAMAAJ&pg=RA6-PA24&lpg=RA6-PA24&dq=chieu+lac+soc+18&source=bl&ots=3_RQOgwwzE&sig=ACfU3U1Ycu-WVn8GlvCcGJqfLJzzD2kP6Q&hl=en&sa=X&ved=2ahUKEwiXjf-E8JqHAxV4AHkGHY56CVYQ6AF6BAgaEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
