--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-10 02:53:15
+lastsearch = 2024-07-10 04:14:22
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -81.2%%
-title = #beautytok #blush #newproduct @Huda
-url = https://www.tiktok.com/@hudabeauty/video/7376703844530588970
+match = -231.2%%
+title = Reverse Corrector #beautytok #makeuphacks #colorcorection ...
+url = https://www.tiktok.com/@hudabeauty/video/7378924653521177898
 
 [archiveofourown.org]
 match = -137.5%%
@@ -67,8 +67,8 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.facebook.com]
-match = -243.8%%
-title = Phụ Kiện Quà Tặng Hana Bình Dương - Túi xách lông stick Tím ...
+match = -225.0%%
+title = Phụ Kiện Quà Tặng Hana Bình Dương - Túi xách lông stick ...
 url = https://www.facebook.com/photo.php?fbid=122125314410079971&id=61552399139360&set=a.122098393922079971&locale=ms_MY
 
 [archive.org]
