CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-10 04:13:34
+lastsearch = 2024-07-10 04:44:13
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 [books.google.com]
 match = -231.2%%
 title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=rKfaAAAAMAAJ&pg=RA6-PA24&lpg=RA6-PA24&dq=chieu+lac+soc+18&source=bl&ots=3_RQOgwwzE&sig=ACfU3U1Ycu-WVn8GlvCcGJqfLJzzD2kP6Q&hl=en&sa=X&ved=2ahUKEwiXjf-E8JqHAxV4AHkGHY56CVYQ6AF6BAgaEAM
+url = https://books.google.com/books?id=rKfaAAAAMAAJ&pg=RA6-PA24&lpg=RA6-PA24&dq=chieu+lac+soc+18&source=bl&ots=3_RQOhouDE&sig=ACfU3U1j7UeKNzdF9DJ6KBR3uraHzSrLWQ&hl=en&sa=X&ved=2ahUKEwj175ny9pqHAxUYGTQIHUuvAZoQ6AF6BAgYEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
