--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-10 02:47:26
+lastsearch = 2024-07-10 04:50:21
 
 [burningman.org]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = 0.0%%
-title = Primitive Technology
-url = https://www.youtube.com/channel/UCAL3JXZSzSm8AlZyD3nQdBA
+match = -66.7%%
+title = OLLIE 1- POINT TO THE TABLE- TRANG 10
+url = https://www.youtube.com/watch?v=2YbcRGD-gIg
 
 [www.hcso.org]
 match = 7.7%%
@@ -650,4 +650,9 @@ url = https://www.uspreventiveservicestaskforce.org/uspstf/recommendation/lung-c
 match = 9.1%%
 title = WIS News 10
 url = https://www.wistv.com/
+
+[tenten.app]
+match = -40.0%%
+title = ten ten - Apps on Google Play
+url = https://tenten.app/
 
