--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-10 02:51:17
+lastsearch = 2024-07-10 04:47:18
 
 [www.instagram.com]
-match = -26.7%%
-title = Esther Chan (@chan.hoi.ming)
-url = https://www.instagram.com/chan.hoi.ming/
+match = -6.7%%
+title = Hoi Chan (@hoichandraws)
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [thewoksoflife.com]
 match = -66.7%%
