--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-09 20:47:32
+lastsearch = 2024-07-10 04:53:00
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = -10.0%%
+title = Tư vấn mua chiếu điều hòa chính hãng, giá rẻ tại Đệm Xanh
+url = https://demxanh.com/tu-van-mua-chieu-dieu-hoa-chinh-hang-gia-re-tai-dem-xanh.html
 
 [suongtuyet.com]
 match = 16.7%%
@@ -33,8 +33,8 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [demviethome.vn]
 match = 26.7%%
-title = Chiếu điều hòa Latex C24 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c24/
+title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [www.dienmayxanh.com]
 match = -36.7%%
