--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-10 03:30:51
+lastsearch = 2024-07-10 04:45:43
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -227,9 +227,9 @@ title = Freedom Shield 24 set to begin
 url = https://www.usfk.mil/Media/Press-Products/Press-Releases/Article/3688893/freedom-shield-24-set-to-begin/
 
 [cryptonews.com]
-match = -104.3%%
-title = Pepe Price Prediction: Can It Recover After 51%% Decline ...
-url = https://cryptonews.com/news/pepe-price-prediction-can-it-recover-after-51-decline-from-recent-peak.htm
+match = -113.0%%
+title = Best Crypto to Buy Now July 8 – Celestia, Notcoin, Starknet
+url = https://cryptonews.com/news/best-crypto-to-buy-now-july-8-celestia-notcoin-starknet.htm
 
 [www.op.gg]
 match = -104.3%%
