--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-10 00:32:15
+lastsearch = 2024-07-10 05:13:04
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,8 +12,8 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -47.1%%
-title = I Paid My HOA Fine With 38000 Coins
+match = -170.6%%
+title = I Paid My HOA Fine With 38000 Coins : r/CleetusMcFarland
 url = https://www.reddit.com/r/CleetusMcFarland/comments/128tzvx/i_paid_my_hoa_fine_with_38000_coins/
 
 [www.quora.com]
@@ -82,9 +82,9 @@ title =
 url = https://www.cedarmanagementgroup.com/trespassing-in-hoa/
 
 [www.hopb.co]
-match = -135.3%%
-title = Virginia HOA Laws, Rules, Resources & Information
-url = https://www.hopb.co/virginia
+match = -170.6%%
+title = What About the Children? HOA Age Restrictions and FHA ...
+url = https://www.hopb.co/blog/what-about-the-children-hoa-age-restrictions-and-fha-proscriptions
 
 [www.deanmead.com]
 match = 0.0%%
