CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-10 02:17:32
+lastsearch = 2024-07-10 05:37:58
 
 [www.tiktok.com]
 match = -170.6%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -117.6%%
-title = Live xả vườn chậu 16, chậu thiết kế 0333491000
-url = https://www.youtube.com/watch?v=vx2q7C7tLrY
+match = -182.4%%
+title = Mãn nhãn phần trình diễn Áo dài của Top 25 Hoa khôi Sông ...
+url = https://www.youtube.com/watch?v=cbBFDGXevZk
 
 [communityassociations.net]
 match = -35.3%%
@@ -400,4 +400,9 @@ url = https://www.quora.com/What-happens-if-you-do-something-without-HOA-approva
 match = -70.6%%
 title = New York State Multiple Dwelling Law
 url = https://www.nyc.gov/assets/buildings/pdf/MultipleDwellingLaw.pdf
+
+[seabreezemgmt.com]
+match = 0.0%%
+title = 
+url = https://seabreezemgmt.com/hoa-management/san-diego/
 
