--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-09 23:51:37
+lastsearch = 2024-07-10 05:31:35
 
 [www.cms.gov]
 match = 4.5%%
@@ -555,4 +555,9 @@ url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley
 match = 0.0%%
 title = 
 url = https://amateurphotographer.com/review/om-system-tough-tg-7-review-raw-makes-it/
+
+[www.parkcameras.com]
+match = 0.0%%
+title = 
+url = https://www.parkcameras.com/blog/reviews/om-system-tough-tg-7-review_action-13-9
 
