--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-10 03:38:05
+lastsearch = 2024-07-10 05:36:17
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -270.0%%
-title = The United States Air Force JAG Law Review
-url = https://books.google.com/books?id=hRVIAQAAIAAJ&pg=PA147&lpg=PA147&dq=man+ren+16&source=bl&ots=ISTkRroJrG&sig=ACfU3U2lQeKpr0tdhGcJj2ei8p5Sp_JOIA&hl=en&sa=X&ved=2ahUKEwifnOqWr5qHAxVjM1kFHX0iBNwQ6AF6BAgVEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlenNHqpd&sig=ACfU3U2h6sUQPpYW3lEBCPwR5OGf7irZRQ&hl=en&sa=X&ved=2ahUKEwjKyeTDgpuHAxVSF1kFHZr_BeAQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -270.0%%
-title = @renforshort • Instagram photos and videos
-url = https://www.instagram.com/renforshort/?hl=en
+match = -120.0%%
+title = Ren Thomas (@renthomasmusic)
+url = https://www.instagram.com/renthomasmusic/?hl=en
 
 [www.youtube.com]
 match = -310.0%%
