--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-10 04:14:54
+lastsearch = 2024-07-10 05:36:06
 
 [tuhung.net]
 match = -116.7%%
@@ -52,8 +52,8 @@ title = Giá nệm topper foam ở đâu rẻ nhất tháng 06/2024 - Trang 14 -
 url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Nệm - Điệp Xuân
+match = -7.7%%
+title = Điệp Xuân Nệm
 url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
 
 [m.facebook.com]
