--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-10 00:32:06
+lastsearch = 2024-07-10 05:32:58
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 02
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
+match = -45.5%%
+title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -27,8 +27,8 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -72.7%%
-title = Đệm giường đơn có những kích thước nào? Bảng giá
+match = -81.8%%
+title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/dem-giuong-don
 
 [cafeland.vn]
