--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-09 23:53:54
+lastsearch = 2024-07-10 05:32:24
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -12,9 +12,9 @@ title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
 url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
-match = -11.1%%
-title = Thảm xốp tranh giao thông 60×60
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 22.2%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamvinhthuan.com]
 match = 16.7%%
@@ -27,14 +27,14 @@ title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
 url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
-url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
+match = -111.1%%
+title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -66.7%%
-title = Thảm Xốp 60 × 60 Cm Trải Sàn Vân Gỗ Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-trai-san-van-go-au-lac/
+match = -83.3%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [thamtuonglam.vn]
 match = 21.4%%
