CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-10 03:44:25
+lastsearch = 2024-07-10 05:46:40
 
 [www.muji.com]
 match = 7.1%%
@@ -95,4 +95,9 @@ url = https://en.wikipedia.org/wiki/Muji
 match = -42.9%%
 title = sze long chan - cafe&meal muji
 url = https://hk.linkedin.com/in/sze-long-chan-2320561bb
+
+[www.tiktok.com]
+match = 100.0%%
+title = Chăn Lông Muji
+url = https://www.tiktok.com/discover/Chăn-lông-muji
 
