--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-10 01:19:17
+lastsearch = 2024-07-10 05:54:01
 
 [www.diepxuan.com]
-match = -20.8%%
-title = Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
+match = -62.5%%
+title = Điệp Xuân Bộ ga gối chun xoa 2m.22 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 
 [changagoidemsonghong.com]
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
+title = Everon EPM-22064 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22064.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -47,8 +47,8 @@ title = Chăn ga gối đệm Everon 2022, chăn ga everon giảm giá ...
 url = https://dailyeveron.vn/bo-everon-2022.html
 
 [everonhanquoc.vn]
-match = 33.3%%
-title = Bộ chăn ga gối EPM 23067
+match = -29.2%%
+title = Bộ Everon EPM 23067 - Chăn ga gối đệm Everon
 url = https://everonhanquoc.vn/everon/13847/bo-chan-ga-goi-epm-23067
 
 [songhongonline.vn]
