--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-10 04:19:11
+lastsearch = 2024-07-10 05:48:42
 
 [www.youtube.com]
-match = -88.0%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
+match = -48.0%%
+title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
+url = https://www.youtube.com/watch?v=0--4nk6XRjE
 
 [www.voatiengviet.com]
 match = -92.0%%
