--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-10 02:29:07
+lastsearch = 2024-07-10 05:53:18
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -23.1%%
+title = Japanese spider crab
+url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
 match = -61.5%%
