--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-10 04:30:10
+lastsearch = 2024-07-10 05:49:28
 
 [erado.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Tham trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=tham trải giường
 
 [noithattamviet.net]
-match = -10.0%%
-title = Giường ngủ gỗ công nghiệp GCN-14
-url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
+match = -30.0%%
+title = Giường bọc nhung gỗ công nghiệp GB-14
+url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
 
 [nemphuoclong.vn]
 match = -55.0%%
@@ -182,9 +182,9 @@ title = Thảm nỉ trải giường có những kích thước nào?
 url = http://www.vatlieusan.com/tin-tuc/tham-ni-trai-giuong-co-nhung-kich-thuoc-nao-d102.html
 
 [sumika.vn]
-match = -140.0%%
-title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích của ...
-url = https://sumika.vn/ghe-xep-giuong-xep-839
+match = -85.0%%
+title = Giường bố là gì? Ưu điểm nổi bật của giường bố
+url = https://sumika.vn/giuong-bo-la-gi-uu-diem-noi-bat-cua-giuong-bo
 
 [sofaloctien.vn]
 match = -100.0%%
