CI images update

--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-09 23:37:07
+lastsearch = 2024-07-10 06:16:32
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 160x200
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
