--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-10 03:32:37
+lastsearch = 2024-07-10 06:18:57
 
 [www.bible.com]
 match = -157.1%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -207.1%%
+title = Mùng chụp tự bung đỉnh rộng HOÀNG PHÁT - XANH TRƠN ...
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-rong-hoang-phat-xanh-tron-loai-tot-.html
 
 [manthutrang.com]
 match = -207.1%%
@@ -77,9 +77,9 @@ title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
 url = https://www.youtube.com/watch?v=AEddlekH6zA
 
 [www.instagram.com]
-match = -250.0%%
-title = Gisele Bündchen (@gisele) • Instagram photos and videos
-url = https://www.instagram.com/gisele/?hl=en
+match = -257.1%%
+title = Jamie Oliver (@jamieoliver) • Instagram photos and videos
+url = https://www.instagram.com/jamieoliver/?hl=en
 
 [en.wikipedia.org]
 match = -66.7%%
