--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-10 05:16:56
+lastsearch = 2024-07-10 06:17:15
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -197,9 +197,9 @@ title = Christopher Copperwheat
 url = https://www.ljmu.ac.uk/about-us/staff-profiles/faculty-of-engineering-and-technology/astrophysics-research-institute/christopher-copperwheat
 
 [cps-vo.org]
-match = -140.0%%
-title = Registrants | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/node/57775
+match = -190.0%%
+title = *** 276 Total Attendees (listed in green) *** | Cyber-Physical ...
+url = https://cps-vo.org/cps-pimtg24/registrants-attendees
 
 [www.va.gov]
 match = -21.4%%
