CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-10 05:37:58
+lastsearch = 2024-07-10 06:46:28
 
 [www.tiktok.com]
 match = -170.6%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -182.4%%
-title = Mãn nhãn phần trình diễn Áo dài của Top 25 Hoa khôi Sông ...
-url = https://www.youtube.com/watch?v=cbBFDGXevZk
+match = -70.6%%
+title = 𝙍𝙚𝙡𝙖𝙭𝙞𝙣𝙜 𝙎𝙠𝙞𝙣𝙘𝙖𝙧𝙚 𝙍𝙤𝙪𝙩𝙞𝙣𝙚 𝘾𝙡𝙚𝙖𝙣𝙨𝙞𝙣𝙜 ...
+url = https://www.youtube.com/watch?v=fkSO3-Ca_ow
 
 [communityassociations.net]
 match = -35.3%%
@@ -405,4 +405,14 @@ url = https://www.nyc.gov/assets/buildings/pdf/MultipleDwellingLaw.pdf
 match = 0.0%%
 title = 
 url = https://seabreezemgmt.com/hoa-management/san-diego/
+
+[www.hoalife.com]
+match = 0.0%%
+title = 
+url = https://www.hoalife.com/blog/hoa-president
+
+[www.azleg.gov]
+match = -17.6%%
+title = Homeowners' Associations
+url = https://www.azleg.gov/Briefs/Senate/HOMEOWNERS' ASSOCIATIONS 2022.PDF
 
