--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-10 00:21:26
+lastsearch = 2024-07-10 06:48:54
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -100.0%%
+title = Blue Eye Samurai (TV Series 2023)
+url = https://www.imdb.com/title/tt13309742/
 
 [www.etsy.com]
 match = 35.7%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = 8.3%%
+title = Greenwashing
+url = https://en.wikipedia.org/wiki/Greenwashing
 
 [www.yeastdriven.com]
 match = -114.3%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = -221.4%%
-title = Ăn icon 🫒 🥒 🍜🐤 🎈 🫒🫒🫒quả xanh xanh tròn tròn này là quả gì ...
-url = https://www.facebook.com/babykopohome.page/videos/ăn-icon-quả-xanh-xanh-tròn-tròn-này-là-quả-gì/2251528275000141/?locale=ms_MY
+match = -7.1%%
+title = Người Việt Houston
+url = https://www.facebook.com/groups/NguoiVietHouston/
 
 [mail.google.com]
 match = -14.3%%
@@ -280,4 +280,9 @@ url = https://clipchamp.com/vi/features/green-screen-video-editor/
 match = 0.0%%
 title = 
 url = https://www.smartprix.com/mobiles/xiaomi-redmi-k60-ppd16lky23ku
+
+[www.usgbc.org]
+match = -107.1%%
+title = USGBC | U.S. Green Building Council
+url = https://www.usgbc.org/
 
