--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-10 02:50:08
+lastsearch = 2024-07-10 06:44:48
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -67,9 +67,9 @@ title = Bảng Giá
 url = https://www.benhvientanhung.com.vn/bang-gia-dich-vu
 
 [m.facebook.com]
-match = -57.1%%
-title = Cần tìm người phụ bán - rửa chén - dọn dẹp cho quán hủ ...
-url = https://m.facebook.com/groups/617554715100791/posts/2340075122848733/
+match = 3.6%%
+title = VĨNH CỬU - ĐỒNG NAI | TUYỂN CÔNG NHÂN
+url = https://m.facebook.com/groups/617554715100791/posts/2339785609544351/
 
 [vi.wikipedia.org]
 match = 17.9%%
