--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-10 05:56:03
+lastsearch = 2024-07-10 06:49:38
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Phi Đội F-16V Tinh Nhuệ Của Đài Loan: Lời Cảnh Báo Đanh ...
-url = https://www.youtube.com/watch?v=XMZHfpjUzhg
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
 
 [m.facebook.com]
 match = -95.2%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = -114.3%%
+title = Hộ chiếu - Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt ...
+url = https://www.roc-taiwan.org/vn_vi/cat/9.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -82,9 +82,9 @@ title = Đài Bắc – Wikipedia tiếng Việt
 url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
 [www.tripadvisor.com.vn]
-match = -42.9%%
-title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
-url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
+match = -57.1%%
+title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
 match = -95.2%%
