CI images update

--- a/images/ruot-nem-korea-120x190x09/config.ini
+++ b/images/ruot-nem-korea-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 lastopen = 2024-06-10 11:55:00
 
 [search]
-lastsearch = 2024-07-10 03:32:20
+lastsearch = 2024-07-10 09:48:26
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -97,9 +97,9 @@ title = Save for your next trip to Korea ✨ I’m actually still dreaming ...
 url = https://www.tiktok.com/@maizenlife/video/7343837971403017514
 
 [www.quora.com]
-match = -120.0%%
-title = I'm thinking of moving to Korea but I'm not fluent in Korean. ...
-url = https://www.quora.com/Im-thinking-of-moving-to-Korea-but-Im-not-fluent-in-Korean-What-is-the-easiest-way-to-learn-the-language-rapidly
+match = 0.0%%
+title = 
+url = https://www.quora.com/Are-Koreans-allowed-to-marry-Africans-or-other-ethnicities
 
 [blogs.tuni.fi]
 match = -96.0%%
@@ -110,4 +110,9 @@ url = https://blogs.tuni.fi/exchange/culture/postcard-from-seoul-south-korea/
 match = -44.0%%
 title = Does Korea use a stamp for entry? - South ...
 url = https://www.tripadvisor.com.my/ShowTopic-g294196-i8160-k12093585-Does_Korea_use_a_stamp_for_entry-South_Korea.html
+
+[greenhearttravel.org]
+match = 4.0%%
+title = Being Black in South Korea
+url = https://greenhearttravel.org/blog/teach-abroad-south-korea/being-black-in-south-korea
 
