--- a/images/ruot-nem-korea-160x200x09/config.ini
+++ b/images/ruot-nem-korea-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-160x200x09.html
 lastopen = 2024-06-10 12:38:50
 
 [search]
-lastsearch = 2024-07-10 05:44:53
+lastsearch = 2024-07-10 09:51:09
 
 [www.diepxuan.com]
 match = 28.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột nệm Warmdream 180x200x05
 url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
 match = -56.0%%
@@ -90,4 +90,9 @@ url = https://www.tripadvisor.com.my/ShowTopic-g294196-i8160-k12093585-Does_Kore
 match = -100.0%%
 title = Itinerary for 9 days in Korea - Seoul, Busan and Jeju Island
 url = https://www.tripadvisor.com/ShowTopic-g294197-i8161-k6013844-Itinerary_for_9_days_in_Korea_Seoul_Busan_and_Jeju_Island-Seoul.html
+
+[www.quora.com]
+match = 0.0%%
+title = 
+url = https://www.quora.com/Are-Koreans-allowed-to-marry-Africans-or-other-ethnicities
 
