--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-10 06:48:32
+lastsearch = 2024-07-10 09:44:58
 
 [everon.com.vn]
 match = 11.1%%
-title = Bộ Chăn Ga Everon EPM 22070
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
+title = Bộ Chăn Ga Everon EPM 22069
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22069/
 
 [everon.online]
-match = 18.9%%
-title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
-url = https://everon.online/products/bo-everon-sr04
+match = -44.4%%
+title = Bộ Everon EPM22063
+url = https://everon.online/products/bo-everon-epm-22063
 
 [everonhn.com.vn]
 match = 14.8%%
