--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-10 05:19:23
+lastsearch = 2024-07-10 09:46:59
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -77.8%%
@@ -135,4 +135,9 @@ url = http://thegioinemvip.vn/bo-chan-drap-goi-edena-ed-622-3697.html
 match = -260.0%%
 title = FITIN
 url = https://www.facebook.com/fitin.vn/
+
+[www.diepxuan.com]
+match = -38.9%%
+title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
 
