--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-10 08:02:28
+lastsearch = 2024-07-10 09:51:59
 
 [www.youtube.com]
-match = -115.8%%
-title = TIÊU DAO CHƯỞNG KINH ĐỘNG THIÊN NHAI | KIẾM THẾ ...
-url = https://www.youtube.com/watch?v=t__rY6WcypY
+match = -147.4%%
+title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
+url = https://www.youtube.com/watch?v=ASsdVo0WBew
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -137,9 +137,9 @@ title = Chiếu trúc thanh viền lụa loại cây
 url = https://demxanh.com/chieu-truc-moc-lua-cay.html
 
 [vinanet.vn]
-match = -168.4%%
-title = Xuất khẩu gỗ, sản phẩm tăng trưởng nhờ sự phục hồi từ thị ...
-url = https://vinanet.vn/nong-san/xuat-khau-go-va-san-pham-tang-truong-nho-su-phuc-hoi-tu-thi-truong-787209.html
+match = -142.1%%
+title = TT hạt tiêu ngày 9/7: Giá tiêu được kỳ vọng lấy lại mốc ...
+url = https://vinanet.vn/nong-san/tt-hat-tieu-ngay-97-gia-tieu-duoc-ky-vong-lay-lai-moc-160000-dongkg-khi-nguon-cung-that-chat-787221.html
 
 [baodongkhoi.vn]
 match = -115.8%%
