--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-07-10 05:39:04
+lastsearch = 2024-07-10 09:46:28
 
 [demxanh.com]
 match = -14.8%%
@@ -135,4 +135,9 @@ url = https://mediamart.vn/tu-van-dieu-hoa/dieu-hoa-bat-khong-mat
 match = -25.9%%
 title = Chiếu điều hòa lụa tơ tằm 1.6 m *2 m CHUNQIU hàng ...
 url = https://www.sendo.vn/chieu-dieu-hoa-lua-to-tam-16-m-2-m-chunqiu-hang-nhap-khau-cao-cap-tang-kem-2-goi-94887127.html
+
+[h5.lazada.vn]
+match = -40.7%%
+title = Chiếu điều hòa mát lạnh ĐỦ SIZE loại dày, chiếu mây có ...
+url = https://h5.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-chieu-may-co-the-gap-gon-giup-ngu-ngon-hon-i557242724.html
 
