--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-10 07:58:28
+lastsearch = 2024-07-10 09:48:03
 
 [shopee.vn]
 match = 66.7%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -170,4 +170,14 @@ url = https://developers.cloudflare.com/waf/tools/scrape-shield/email-address-ob
 match = -206.2%%
 title = Cập nhật giá vàng chốt phiên 6.7: Có thể bứt phá trong ...
 url = https://laodong.vn/tien-te-dau-tu/cap-nhat-gia-vang-chot-phien-67-co-the-but-pha-trong-nua-cuoi-nam-nay-1362588.ldo
+
+[doanthanhnien.vn]
+match = -206.2%%
+title = Phản bác, phê phán quan điểm sai trái và nhận thức lệch ...
+url = https://doanthanhnien.vn/tin-tuc/bao-ve-nen-tang-tu-tuong-cua-dang/phan-bac-phe-phan-quan-diem-sai-trai-va-nhan-thuc-lech-lac-ve-nguyen-tac-tu-phe-binh-va-phe-binh
+
+[minhtuanmobile.com]
+match = -162.5%%
+title = Cửu Long Thành Trại hé lộ lịch chiếu 2 phần kế tiếp
+url = https://minhtuanmobile.com/tin-tuc/cuu-long-thanh-trai-he-lo-lich-chieu-2-phan-ke-tiep/
 
