--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-10 02:46:34
+lastsearch = 2024-07-10 09:44:38
 
 [www.riotgames.com]
 match = -84.0%%
@@ -77,9 +77,9 @@ title = DIR - 615 - Language change (Korean)
 url = http://forums.dlink.com/index.php?topic=2934.0
 
 [www.quora.com]
-match = -120.0%%
-title = I'm thinking of moving to Korea but I'm not fluent in Korean. ...
-url = https://www.quora.com/Im-thinking-of-moving-to-Korea-but-Im-not-fluent-in-Korean-What-is-the-easiest-way-to-learn-the-language-rapidly
+match = 0.0%%
+title = 
+url = https://www.quora.com/Are-Koreans-allowed-to-marry-Africans-or-other-ethnicities
 
 [m.facebook.com]
 match = -108.0%%
