CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-10 06:46:28
+lastsearch = 2024-07-10 10:36:43
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdljj80mY&sig=ACfU3U0o43ieDzUiDad6WssyvYa-CFumOA&hl=en&sa=X&ved=2ahUKEwi0593KspiHAxWbIjQIHQvZBIgQ6AF6BAg8EAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdlkk63dT&sig=ACfU3U3GECvewKnqitMrmbeyf5TzmZX89A&hl=en&sa=X&ved=2ahUKEwicsYXXxZuHAxWimIkEHTFcB1UQ6AF6BAgWEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -70.6%%
-title = 𝙍𝙚𝙡𝙖𝙭𝙞𝙣𝙜 𝙎𝙠𝙞𝙣𝙘𝙖𝙧𝙚 𝙍𝙤𝙪𝙩𝙞𝙣𝙚 𝘾𝙡𝙚𝙖𝙣𝙨𝙞𝙣𝙜 ...
-url = https://www.youtube.com/watch?v=fkSO3-Ca_ow
+match = -117.6%%
+title = Live xả vườn chậu 16, chậu thiết kế 0333491000
+url = https://www.youtube.com/watch?v=vx2q7C7tLrY
 
 [communityassociations.net]
 match = -35.3%%
@@ -415,4 +415,9 @@ url = https://www.hoalife.com/blog/hoa-president
 match = -17.6%%
 title = Homeowners' Associations
 url = https://www.azleg.gov/Briefs/Senate/HOMEOWNERS' ASSOCIATIONS 2022.PDF
+
+[www.steadily.com]
+match = 0.0%%
+title = 
+url = https://www.steadily.com/blog/michigan-hoa-laws-regulations
 
