--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-10 03:47:27
+lastsearch = 2024-07-10 10:33:55
 
 [shopee.vn]
 match = -8.0%%
@@ -87,9 +87,9 @@ title = Sự kiện Dịch vụ Lãnh Sự sắp tới tại Đà Nẵng
 url = https://vn.usembassy.gov/vi/upcoming-consular-services-event-in-da-nang-24-june-2024/
 
 [m.facebook.com]
-match = -16.0%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://m.facebook.com/groups/266525127391292/
+match = -92.0%%
+title = Gap go buoi toi tam ti may c oi | By Kem sach olee NGOC ...
+url = https://m.facebook.com/Kem-sach-olee-NGOC-HA-100204011784578/videos/gap-go-buoi-toi-tam-ti-may-c-oi/1408185629686574/
 
 [www.youtube.com]
 match = -108.0%%
@@ -212,14 +212,14 @@ title = Kết quả sản xuất vụ đông xuân năm 2024
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/ket-qua-san-xuat-vu-dong-xuan-nam-2024/
 
 [znews.vn]
-match = -68.0%%
-title = Một lần đặt chân đến địa điểm quay loạt phim Đài Loan nổi ...
-url = https://znews.vn/mot-lan-dat-chan-den-dia-diem-quay-loat-phim-dai-loan-noi-tieng-post1446961.html
+match = -4.0%%
+title = Tin tức tức online 24h về Ten lua
+url = https://znews.vn/Ten-lua-tin-tuc/trang229.html?type=2
 
 [vnexpress.net]
-match = -8.0%%
-title = Động đất 7,4 độ ở Đài Loan, 9 người chết
-url = https://vnexpress.net/dong-dat-7-4-do-o-dai-loan-9-nguoi-chet-4729815.html
+match = -37.5%%
+title = tags-sitemap.xml
+url = https://vnexpress.net/tags-sitemap.xml?p=3214
 
 [thoibaotaichinhvietnam.vn]
 match = -96.0%%
@@ -235,4 +235,19 @@ url = https://baomoi.com/dieu-gi-da-xay-ra-voi-292-khach-dai-loan-bi-bo-roi-tai-
 match = 28.0%%
 title = Tìm hiểu về đất nước Đài Loan
 url = https://thuanandmc.vn/tim-hieu-ve-dat-nuoc-dai-loan.65.html
+
+[zingnews.vn]
+match = -80.0%%
+title = nguoi dai loan - Tin tức tức online 24h về người đài loan
+url = https://zingnews.vn/người-đài-loan-tin-tuc/trang20.html?type=2
+
+[www.quora.com]
+match = -72.0%%
+title = How much damage did France cause to Vietnam when it ...
+url = https://www.quora.com/How-much-damage-did-France-cause-to-Vietnam-when-it-colonized-Vietnam-during-the-19th-20th-century
+
+[groups.io]
+match = 8.0%%
+title = Mua bao tuyet - VanHanhKHXH5
+url = https://groups.io/g/VanHanhKHXH5/topic/56492954?p=Created,,,20,2,0,0::recentpostdate/sticky,,,20,1,20,56492954
 
