--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-10 08:02:54
+lastsearch = 2024-07-10 10:32:50
 
 [demtot.com]
-match = 45.0%%
-title = Đệm lò xo túi Acness
-url = https://demtot.com/dem-lo-xo-tui-acnes/
+match = -44.4%%
+title = Đệm Lò Xo
+url = https://demtot.com/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -75,4 +75,9 @@ url = https://www.facebook.com/p/Đệm-Lò-Xo-Cao-Cấp-0965015358-100027974757
 match = -61.9%%
 title = Đại lý bán Đệm lò xo Tuấn Anh tại Quận Cầu Giấy
 url = https://changagoidemsonghong.online/dai-ly-ban-dem-lo-xo-tuan-anh-tai-quan-cau-giay.html
+
+[dem24h.vn]
+match = 57.1%%
+title = Đệm lò xo Techwood Tuấn Anh
+url = https://dem24h.vn/dem-lo-xo-techwood-tuan-anh-1
 
