--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-10 05:19:03
+lastsearch = 2024-07-10 10:31:44
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -53,8 +53,8 @@ url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
 match = -86.4%%
-title = Thảm trải sàn phòng khách hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải sàn phòng khách
+title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng ...
+url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
 
 [cafeland.vn]
 match = -45.5%%
