--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-10 10:19:52
+lastsearch = 2024-07-10 10:34:14
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -12,14 +12,14 @@ title = Alexandre Chan
 url = https://profiles.icts.uci.edu/alexandre.chan
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -173.7%%
-title = Fine-Scale Mapping at 9p22.2 Identifies Candidate Causal ...
-url = https://pubmed.ncbi.nlm.nih.gov/27463617/
+match = -152.6%%
+title = Observation of Gravitational Waves from a 22-Solar-Mass ...
+url = https://pubmed.ncbi.nlm.nih.gov/27367379/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.1%%
+title = ADDITIONAL CASE INFORMATION
+url = https://www.dir.ca.gov/dwc/SB1160-AB1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
 match = 5.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -14.3%%
-title = Louise Laurent
-url = https://profiles.ucsd.edu/louise.laurent
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2022/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
