CI images update

--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-10 05:17:39
+lastsearch = 2024-07-10 10:50:19
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -135.0%%
 title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek-oAMkZ&sig=ACfU3U1Db9oSnbt2crTYTzpr2IZNyFe7rQ&hl=en&sa=X&ved=2ahUKEwjE-7eu_pqHAxVag4kEHfnqD1IQ6AF6BAgTEAM
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek-qAMgZ&sig=ACfU3U3qW0TYVkmkRvJQ5aYLNj5NotApTg&hl=en&sa=X&ved=2ahUKEwjx-ZPcyJuHAxXMj4kEHbhzA_8Q6AF6BAgoEAM
 
 [thehill.com]
 match = -105.0%%
