--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-10 06:50:10
+lastsearch = 2024-07-10 10:49:23
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Hanvico LIVING - LV18
 url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 57.7%%
-title = Bộ chăn ga gối SH_UC22 018
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-uc22-018
+match = 48.0%%
+title = Bộ chăn ga gối SH_H19 069
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-h19-069
 
 [changagoidemsonghong.com]
 match = 38.7%%
