--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-10 09:47:21
+lastsearch = 2024-07-10 10:50:41
 
 [gobearcats.com]
 match = -142.1%%
@@ -77,8 +77,8 @@ title = Sandra Oh (@iamsandraohinsta)
 url = https://www.instagram.com/iamsandraohinsta/?hl=en
 
 [medboard.nv.gov]
-match = -136.8%%
-title = Disciplinary Actions - NV Board of Medical Examiners
+match = -100.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.facesofsuicide.com]
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -121.1%%
-title = Frank Sinatra & Shirley Temple 1940s Advertising F
-url = https://evstamps.hibid.com/lot/193551109
+match = -178.9%%
+title = Lot # : 58 - US Stamps Local, American Letter Mail Trial Color
+url = https://evstamps.hibid.com/lot/187490408
 
 [ltg.gov.vi]
 match = -168.4%%
