--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-10 11:23:54
+lastsearch = 2024-07-10 11:52:00
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -142,12 +142,37 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -100.0%%
-title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
-url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
+match = -11.1%%
+title = topics-sitemap.xml
+url = https://vnexpress.net/topics-sitemap.xml?p=59
 
 [vietsuntravel.com]
 match = -28.6%%
 title = Tour Đài Loan 5N4Đ (KH: 16/08/2024)
 url = https://vietsuntravel.com/products/tour-dai-loan-5n4d-kh-16-08-2024
+
+[znews.vn]
+match = -100.0%%
+title = Nữ diva Đài Loan âu yếm bạn trai kém 16 tuổi trên phố
+url = https://znews.vn/nu-diva-dai-loan-au-yem-ban-trai-kem-16-tuoi-tren-pho-post982740.html
+
+[113.165.166.110:81]
+match = -152.4%%
+title = Quan h^ thuong mai \^et Nam - Dai Loan tnroc va sau khi Viet Nam ...
+url = http://113.165.166.110:81/bitstream/DL_134679/30384/1/CVv168S5622020004.pdf
+
+[zingnews.vn]
+match = -128.6%%
+title = cho chet vi dai - Tin tức tức online 24h về chó chết vì dại
+url = https://zingnews.vn/chó-chết-vì-dại-tin-tuc/trang5.html?type=2
+
+[www.quora.com]
+match = -123.8%%
+title = Who was a better military commander, Tran Hung Dao or ...
+url = https://www.quora.com/Who-was-a-better-military-commander-Tran-Hung-Dao-or-Quang-Trung
+
+[lyso.vn]
+match = -104.8%%
+title = mệnh Tử Phá(Mùi) có Tả Hữu xung chiếu, Xương Khúc ...
+url = https://lyso.vn/hoi-tu-vi/menh-tu-pha-mui-co-ta-huu-xung-chieu-xuong-khuc-hiep-menh-t41079-40.html
 
