--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-10 03:43:51
+lastsearch = 2024-07-10 11:46:39
 
 [shopee.vn]
-match = -81.8%%
-title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
-url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
+match = 9.1%%
+title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
+url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
 
 [www.facebook.com]
 match = 36.4%%
@@ -82,9 +82,9 @@ title = Chiếu Nhựa Thái Lan Cỡ Đại Con Hươu 3m x 1,8m 6/1
 url = https://truonganmart.vn/chieu-trai-nen-con-huou-3-5-x-2m/7731
 
 [www.youtube.com]
-match = -95.5%%
-title = Hát Chèo Thái Bình Đặc Sắc Đón Xuân 2023- Quê Hương ...
-url = https://www.youtube.com/watch?v=34JhKS5E8Rs
+match = -81.8%%
+title = Vở Diễn Mới Nhất 2023 Của Nhà Hát Chèo Thái Bình- Kỳ ...
+url = https://www.youtube.com/watch?v=3EXqN-9cwKc
 
 [thegioithangnhom.com.vn]
 match = -27.3%%
