--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-10 11:19:07
+lastsearch = 2024-07-10 11:44:10
 
 [demtot.com]
-match = -44.4%%
-title = Đệm Lò Xo
-url = https://demtot.com/dem-lo-xo/
+match = 45.0%%
+title = Đệm lò xo Dunlopillo
+url = https://demtot.com/dem-lo-xo-dunlopillo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -80,4 +80,14 @@ url = https://changagoidemsonghong.online/dai-ly-ban-dem-lo-xo-tuan-anh-tai-quan
 match = 57.1%%
 title = Đệm lò xo Techwood Tuấn Anh
 url = https://dem24h.vn/dem-lo-xo-techwood-tuan-anh-1
+
+[demgiare.net]
+match = 4.8%%
+title = ĐỆM LÒ XO TECHWOOD 1M8 X 2M SALE OFF 40%%
+url = https://demgiare.net/dem-lo-xo-techwood-1m8-x-2m.html
+
+[m.facebook.com]
+match = 23.8%%
+title = Đệm Lò Xo Cao Cấp 0965015358
+url = https://m.facebook.com/profile.php?id=100027974757211&locale=km_KH
 
