--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-10 05:21:11
+lastsearch = 2024-07-10 11:44:46
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -125.0%%
-title = mega88 slot game–Apps on Google Play964.91.4
-url = https://sv.ut.edu.vn/newscowtl1.html
+match = -75.0%%
+title = luật poker omaha-App Store5.93.517
+url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
 match = -43.8%%
@@ -420,4 +420,9 @@ url = https://stockbiz.vn/tin-tuc/ssi-research-dong-tien-se-luan-chuyen-tim-toi-
 match = -6.2%%
 title = Nghề dệt chiếu ở Cần Thơ
 url = https://www.cantho.gov.vn/wps/portal/home/du-khach/chi-tiet/diem-tham-quan/lang-nghe/nghe+det+chieu+o+can+tho
+
+[phatsuonline.vn]
+match = -193.8%%
+title = Phái đoàn Ban Hoằng pháp cùng Ban Kinh tế Tài chính ...
+url = https://phatsuonline.vn/phai-doan-ban-hoang-phap-cung-ban-kinh-te-tai-chinh-tw-tham-va-cung-duong-truong-ha-tinh-cao-bang-56
 
