CI images update

--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-10 11:24:26
+lastsearch = 2024-07-10 12:14:39
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -30,4 +30,14 @@ url = https://finance.yahoo.com/quote/TUI1.SG/
 match = 0.0%%
 title = 
 url = https://www.cruise.co.uk/bulletin/the-best-way-to-experience-singapore-and-its-cruise-port/
+
+[boards.cruisecritic.com]
+match = -91.7%%
+title = SGAC with MYICA app query entering by Air to embark...
+url = https://boards.cruisecritic.com/topic/2979012-sgac-with-myica-app-query-entering-by-air-to-embark/
+
+[www.tripadvisor.com]
+match = -50.0%%
+title = SG Arrival Card and ePass - Singapore Forum
+url = https://www.tripadvisor.com/ShowTopic-g294262-i1747-k14626749-SG_Arrival_Card_and_ePass-Singapore.html
 
