--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-10 10:31:44
+lastsearch = 2024-07-10 12:13:34
 
 [demxanh.com]
 match = -22.7%%
@@ -32,8 +32,8 @@ title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn 
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
+match = -90.9%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [flexhouse.vn]
@@ -42,8 +42,8 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
+match = 40.9%%
+title = Thảm giường nỉ 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
@@ -67,9 +67,9 @@ title = Đệm bông ép Everon 1m5 (1.5m) | Chính hãng, Giá tốt tại ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m5.html
 
 [shopee.vn]
-match = -81.8%%
-title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
-url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
+match = -100.0%%
+title = Thảm phòng khách - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm/phòng khách
 
 [www.kymdan.com]
 match = -18.2%%
