--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-10 07:58:16
+lastsearch = 2024-07-10 12:52:37
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -132,9 +132,9 @@ title = đô thị tối cường chiến thần nettruyen|Casino Trực Tuyến
 url = https://tinchi.qnu.edu.vn/đô_thị_tối_cường_chiến_thần_nettruyen.xhtml
 
 [tuoitre.vn]
-match = -187.5%%
-title = Yamaha ra mắt xe tay ga hybrid có công nghệ gọi xe ...
-url = https://tuoitre.vn/yamaha-ra-mat-xe-tay-ga-hybrid-co-cong-nghe-goi-xe-khong-so-lac-dau-honda-vision-20240611225110655.htm
+match = -106.2%%
+title = Tiếp nhận con trăn gấm quý hiếm nặng gần 12kg
+url = https://tuoitre.vn/tiep-nhan-con-tran-gam-quy-hiem-nang-gan-12kg-20240710112513244.htm
 
 [cafef.vn]
 match = -156.2%%
