--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-10 11:52:00
+lastsearch = 2024-07-10 12:47:52
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -142,9 +142,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -11.1%%
-title = topics-sitemap.xml
-url = https://vnexpress.net/topics-sitemap.xml?p=59
+match = -100.0%%
+title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
+url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
 
 [vietsuntravel.com]
 match = -28.6%%
