--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-10 09:48:03
+lastsearch = 2024-07-10 12:48:03
 
 [shopee.vn]
 match = 66.7%%
@@ -87,9 +87,9 @@ title = Cách tăng chiều cao ở tuổi 12 đơn giản, dễ dàng ngay tạ
 url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
+match = -231.2%%
+title = Phân tích kỹ thuật phiên chiều 10/07: Thị trường diễn biến ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1007-thi-truong-dien-bien-giang-co-585-1206162.htm
 
 [www.vinmec.com]
 match = -25.0%%
@@ -180,4 +180,9 @@ url = https://doanthanhnien.vn/tin-tuc/bao-ve-nen-tang-tu-tuong-cua-dang/phan-ba
 match = -162.5%%
 title = Cửu Long Thành Trại hé lộ lịch chiếu 2 phần kế tiếp
 url = https://minhtuanmobile.com/tin-tuc/cuu-long-thanh-trai-he-lo-lich-chieu-2-phan-ke-tiep/
+
+[hanoimoi.vn]
+match = -187.5%%
+title = Câu lạc bộ Phụ nữ Thủ đô tập huấn phòng, chống dịch ...
+url = https://hanoimoi.vn/cau-lac-bo-phu-nu-thu-do-tap-huan-phong-chong-dich-benh-mua-he-671654.html
 
