--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-10 11:34:37
+lastsearch = 2024-07-10 12:46:12
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -12,9 +12,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [shopee.vn]
-match = 7.1%%
-title = Chiếu Trúc Hạt Mắt Trắng Quế Lâm (Mắt nhỏ Loại 1)
-url = https://shopee.vn/Chiếu-Trúc-Hạt-Mắt-Trắng-Quế-Lâm-(Mắt-nhỏ-Loại-1)-i.22156385.939014750
+match = -3.6%%
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
 match = 3.6%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao cấp Việt Nam thương hiệu Lan Lan
 url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [demxanh.com]
-match = -21.4%%
-title = Bảng giá chiếu trúc Hương Trúc chính hãng giá rẻ ...
-url = https://demxanh.com/chieu-truc-huong-truc.html
+match = -28.6%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
