--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-10 10:36:43
+lastsearch = 2024-07-10 12:52:48
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdlkk63dT&sig=ACfU3U3GECvewKnqitMrmbeyf5TzmZX89A&hl=en&sa=X&ved=2ahUKEwicsYXXxZuHAxWimIkEHTFcB1UQ6AF6BAgWEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ4BxzE75&sig=ACfU3U2Cn20lIttmTKh2dsokkjn5ziq7Bw&hl=en&sa=X&ved=2ahUKEwibos2M5JuHAxW3ElkFHeeOBlwQ6AF6BAg6EAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -420,4 +420,9 @@ url = https://www.azleg.gov/Briefs/Senate/HOMEOWNERS' ASSOCIATIONS 2022.PDF
 match = 0.0%%
 title = 
 url = https://www.steadily.com/blog/michigan-hoa-laws-regulations
+
+[hhlawoffice.com]
+match = 0.0%%
+title = 
+url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
 
