--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-10 12:12:51
+lastsearch = 2024-07-10 14:19:59
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -22,9 +22,9 @@ title = Mền Lông Tuyết Thái Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = -18.5%%
+title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
 
 [demxanh.com]
 match = -18.5%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -29.6%%
-title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
-url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
+match = -66.7%%
+title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
+url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [baodaknong.vn]
 match = -7.4%%
@@ -172,9 +172,9 @@ title = ios 11.2.5 có gì mới
 url = https://ts.udn.vn/qsj/426306/
 
 [www.bbc.com]
-match = -3.7%%
-title = Cựu Thủ tướng Thái Lan Thaksin 'được ân xá'
-url = https://www.bbc.com/vietnamese/articles/c0kd4pl884vo
+match = -51.9%%
+title = Ông Hun Sen thăm ông Thaksin Shinawatra, 'không nói ...
+url = https://www.bbc.com/vietnamese/articles/c2qee52wxz3o
 
 [vneconomy.vn]
 match = -63.0%%
