--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-10 10:50:30
+lastsearch = 2024-07-10 14:13:54
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [tiki.vn]
-match = -8.0%%
-title = Màn đỉnh vuông hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn đỉnh vuông
+match = -36.0%%
+title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
+url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
 
 [shopee.vn]
 match = -48.0%%
@@ -22,9 +22,9 @@ title = màn chụp đỉnh vuông giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=màn chụp đỉnh vuông
 
 [www.mungbaobao.com]
-match = -32.0%%
-title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
-url = https://www.mungbaobao.com/
+match = 48.0%%
+title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 
 [www.mantubung.com]
 match = -52.0%%
-title = Màn Xếp Vuông | Mùng Gấp Vuông Thông Minh Người Lớn ...
-url = https://www.mantubung.com/man-xep-vuong.html
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [demvip.vn]
 match = 52.0%%
