--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-10 12:14:50
+lastsearch = 2024-07-10 14:16:13
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -62,9 +62,9 @@ title = PYEODA
 url = http://noithatbichthuy.com/pyeoda
 
 [changagoidemphuongbac.com]
-match = -65.0%%
-title = Bộ chăn ga gối Tencel EU màu Pyeoda 2023
-url = https://changagoidemphuongbac.com/bo-chan-ga-goi-tencel-eu-mau-pyeoda/
+match = -85.0%%
+title = Chăn sơ đậu nành Pyeoda - Chăn ga gối đệm Phương Bắc
+url = https://changagoidemphuongbac.com/chan-so-dau-nanh-pyeoda/
 
 [thuongtruong.com.vn]
 match = -125.0%%
