--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-10 12:31:09
+lastsearch = 2024-07-10 14:13:21
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,8 +17,8 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
@@ -27,8 +27,8 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -72.7%%
-title = Đệm giường đơn có những kích thước nào? Bảng giá
+match = -81.8%%
+title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/dem-giuong-don
 
 [cafeland.vn]
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -118.2%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
+match = -72.7%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
