CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-10 12:36:13
+lastsearch = 2024-07-10 15:18:42
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -122,8 +122,8 @@ title = Trường Đại học Y Dược Thái Bình
 url = https://tbump.edu.vn/
 
 [www.reddit.com]
-match = 30.4%%
-title = How to pronounce Thai Binh.
+match = -21.7%%
+title = How to pronounce Thai Binh. : r/Vietnamese
 url = https://www.reddit.com/r/Vietnamese/comments/1d5d9f4/how_to_pronounce_thai_binh/
 
 [www.macom.com]
@@ -270,4 +270,9 @@ url = https://www.pbs.org/wgbh/americanexperience/features/vietnam-writers-refle
 match = -39.1%%
 title = Export of denim fabrics quickly recovers
 url = https://english.haiquanonline.com.vn/export-of-denim-fabrics-quickly-recovers-30628.html
+
+[www.scirp.org]
+match = -47.8%%
+title = Thai Binh University, Thai Binh, Vietnam - Articles
+url = https://www.scirp.org/(S(351jmbntvnsjt1aadkozje))/journal/articles?searchcode=Thai+Binh+University,+Thai+Binh,+Vietnam&searchfield=affs&page=1
 
