--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-10 11:36:26
+lastsearch = 2024-07-10 15:25:57
 
 [everonvn.com.vn]
 match = 7.4%%
@@ -32,9 +32,9 @@ title = Chăn ga gối Everon
 url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [sieuthidemhanquoc.com.vn]
-match = 14.8%%
-title = Bộ chăn ga gối Everon EPM-19067
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-19067-1486
+match = 3.7%%
+title = Bộ chăn ga gối đệm Everon EPC-19043
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-dem-everon-epc-19043-1496
 
 [everonvietnam.com]
 match = 36.0%%
