--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-10 14:28:03
+lastsearch = 2024-07-10 15:25:37
 
 [tiki.vn]
 match = -47.6%%
@@ -17,9 +17,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -19.0%%
-title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
-url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
+match = -42.9%%
+title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
+url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -43,8 +43,8 @@ url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [m.facebook.com]
 match = -90.5%%
-title = Lotte Cinema - THANH XUÂN 18x2: LỮ TRÌNH HƯỚNG ...
-url = https://m.facebook.com/story.php/?story_fbid=807781184716598&id=100064541715866
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
+url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [phimmoichillt.net]
 match = -123.8%%
@@ -210,4 +210,9 @@ url = https://zingnews.vn/dai-loan-trung-quoc-tin-tuc/trang191.html?type=2
 match = 23.1%%
 title = Phim Đài Loan
 url = https://motchilltv.to/quoc-gia/dai-loan
+
+[www.bbc.com]
+match = -123.8%%
+title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
+url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
 
