--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-10 13:38:43
+lastsearch = 2024-07-10 15:20:02
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -87.0%%
@@ -67,9 +67,9 @@ title = Global Newsletter #71: No More Fairytales - Extinction Rebellion
 url = https://rebellion.global/pt/blog/2022/12/16/global-newsletter-71/
 
 [www.imdb.com]
-match = 4.5%%
-title = Lies and Alibis (2006)
-url = https://www.imdb.com/title/tt0409681/
+match = 0.0%%
+title = 
+url = https://www.imdb.com/title/tt29722855/characters/nm3011350
 
 [www.reuters.com]
 match = -108.7%%
