--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-10 14:52:55
+lastsearch = 2024-07-10 15:33:06
 
 [demxanh.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = 27.6%%
+title = Chiếu điều hòa cao su non Tencel vàng chanh
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
 
 [tiki.vn]
 match = 20.7%%
@@ -23,8 +23,8 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
 match = -17.2%%
-title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [nanara.vn]
 match = 34.5%%
