--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-10 13:40:30
+lastsearch = 2024-07-10 15:39:55
 
 [www.youtube.com]
 match = -48.0%%
@@ -137,9 +137,9 @@ title = Máy bay chở khách từ Hàn Quốc đi Đài Loan (Trung ...
 url = https://www.qdnd.vn/quoc-te/tin-tuc/may-bay-cho-hon-120-khach-tu-han-quoc-di-dai-loan-trung-quoc-gap-su-co-782241
 
 [www.bbc.com]
-match = -80.0%%
-title = Đài Loan tập trận mô phỏng sát thực tế chiến tranh với ...
-url = https://www.bbc.com/vietnamese/articles/cjeewv9v4d0o
+match = -88.0%%
+title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
+url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
 
 [baoquangnam.vn]
 match = -52.0%%
