--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-10 11:50:25
+lastsearch = 2024-07-10 15:35:39
 
 [dongagroup.vn]
 match = -272.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
-url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
+match = -318.2%%
+title = Có bán Khung giường bằng kim loại tại Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/metal-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
