CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-10 11:44:46
+lastsearch = 2024-07-10 17:18:21
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -402,9 +402,9 @@ title = Triển lãm tranh “Hồi sinh” trên vùng đất lửa
 url = https://vov.vn/van-hoa/trien-lam-tranh-hoi-sinh-tren-vung-dat-lua-post1106540.vov
 
 [cafef.vn]
-match = -200.0%%
-title = Nam thần màn ảnh Việt U50 chưa vợ bất ngờ khoe có con ...
-url = https://cafef.vn/nam-than-man-anh-viet-u50-chua-vo-bat-ngo-khoe-co-con-trai-nho-livestream-ma-doi-doi-doanh-thu-ban-hang-1-ngay-bang-2-thang-dong-phim-188240708102838246.chn
+match = -175.0%%
+title = Phát hiện con suối bên thảo nguyên đẹp như nước ngoài
+url = https://cafef.vn/phat-hien-con-suoi-ben-thao-nguyen-dep-nhu-nuoc-ngoai-cach-tphcm-chi-vai-gio-cuc-thich-hop-cho-mua-he-188240710145809226.chn
 
 [tuoitrethudo.vn]
 match = -200.0%%
