--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-10 16:21:02
+lastsearch = 2024-07-10 17:21:26
 
 [www.riotgames.com]
 match = -84.0%%
@@ -22,9 +22,9 @@ title = Why North Korea’s dumping garbage on South Korea | About ...
 url = https://www.youtube.com/watch?v=SU3JMXEUtgg
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Điệp Xuân Ruột nệm Warmdream 180x200x05
-url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
+match = 60.0%%
+title = Điệp Xuân Ruột nệm Korea 140x190x09
+url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 
 [www.ciee.org]
 match = -100.0%%
