--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-10 16:34:30
+lastsearch = 2024-07-10 17:17:36
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Thảm giường II 180x200
 url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 
 [demxanh.com]
-match = -9.1%%
-title = Thảm trải giường cao su non màu trắng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-trang.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -62,8 +62,8 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -77.3%%
-title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK.vn
+match = -68.2%%
+title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
 url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
@@ -82,8 +82,8 @@ title = Giường bọc nệm hoàng gia GK01
 url = https://nemgiakho.com/giuong-boc-nem-hoang-gia-gk01.html
 
 [dovihome.vn]
-match = -118.2%%
-title = Giường ngủ Decor có tựa đầu bọc nệm Sofa phong cách ...
+match = -77.3%%
+title = Giường ngủ Decor có tựa đầu bọc nệm Sofa ...
 url = https://dovihome.vn/giuong-bay-ma-m30-giuong-ngu-decor-co-tua-dau-boc-nem-sofa-phong-cach-toi-gian
 
 [decoviet.vn]
