--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-10 16:29:08
+lastsearch = 2024-07-10 17:19:27
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -100.0%%
