--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-10 10:16:26
+lastsearch = 2024-07-10 17:16:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -218.8%%
-title = 08-06-2024 Thời sự chiều 18h30 | 08-06-2024 Thời sự chiều ...
-url = https://www.facebook.com/soctrangtv/videos/08-06-2024-thời-sự-chiều-18h30/840287204820537/
+match = -187.5%%
+title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvuiW35N&sig=ACfU3U3G1u2a8qS9zhNizFRjb_OkUl6hig&hl=en&sa=X&ved=2ahUKEwja4Pv-r5eHAxXYM1kFHQqzBnQQ6AF6BAgZEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvwfT5aO&sig=ACfU3U39FNdcm83-DiQnr-IrbV-3RNjB2w&hl=en&sa=X&ved=2ahUKEwicooOGn5yHAxWeMlkFHUKaCq0Q6AF6BAgmEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
+match = -231.2%%
+title = Phân tích kỹ thuật phiên chiều 08/07: Thị trường diễn biến ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0807-thi-truong-dien-bien-giang-co-585-1205437.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -319,7 +319,7 @@ url = https://www.lottecinemavn.com/LCHS/Contents/Event/infomation-delivery-even
 [www.dcine.vn]
 match = -25.0%%
 title = Lịch Chiếu Tại Rạp Phim Dcine
-url = https://www.dcine.vn/lich-chieu/dcine-ben-thanh-2.html
+url = https://www.dcine.vn/lich-chieu/dcine-soc-trang-1.html
 
 [nimpe.vn]
 match = -106.2%%
