--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-10 15:19:27
+lastsearch = 2024-07-10 17:16:19
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlenQMqoc&sig=ACfU3U18I6Kj4Eq05QYiM-hMfoefWJEMNw&hl=en&sa=X&ved=2ahUKEwi6p4nwhJyHAxWdGFkFHVjoCzQQ6AF6BAg4EAM
+match = -270.0%%
+title = The United States Air Force JAG Law Review
+url = https://books.google.com/books?id=hRVIAQAAIAAJ&pg=PA147&lpg=PA147&dq=man+ren+16&source=bl&ots=ISTkSnsMyM&sig=ACfU3U1M2M757Zgd3vHNz4zgshhb5UnN5g&hl=en&sa=X&ved=2ahUKEwiV_t3_npyHAxWQFFkFHSjfD2gQ6AF6BAgTEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
